# Captain-Culinary-Pro-Hub

./: .gitignore  CLAUDE.md  GOVERNANCE.md  README.md  wrangler.jsonc
.claude/skills/cap-voice/: SKILL.md
.github/workflows/: backend-tests.yml  dependency-audit.yml  frontend-build.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  agent.py  audio.py  command.py  config.py  contracts.py  main.py  session.py
backend/tests/: test_agent.py  test_api.py  test_claude_runtime.py  test_command.py  test_config.py  test_safety_invariants.py  test_session.py
command-center/: README.md
command-center/sdk/typescript/: package-lock.json  package.json  tsconfig.json
command-center/sdk/typescript/src/: index.ts
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
research/: ollama-continuity-model.md
research/open-llm-vtuber-evaluation/: UPSTREAM.md  upstream.lock.json
scripts/: attach_upstream_reference.sh  install_continuity_model.sh
