[project]
name = "captain-culinary-pro-hub-spike"
version = "0.1.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
addopts = "-q --cov=app --cov-report=term-missing --cov-fail-under=85"
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
show_missing = true
fail_under = 85
